--- a/ludum-dare-30/Assembly-CSharp-vs.csproj
+++ b/ludum-dare-30/Assembly-CSharp-vs.csproj
@@ -5,7 +5,7 @@
 	<Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
 	<ProductVersion>10.0.20506</ProductVersion>
 	<SchemaVersion>2.0</SchemaVersion>
-	<ProjectGuid>{D2685E56-7DEA-D8F0-96D3-EE19172D4F61}</ProjectGuid>
+	<ProjectGuid>{C1896F36-4F5E-036C-6330-3CB7470F7DB6}</ProjectGuid>
 	<OutputType>Library</OutputType>
 	<AppDesignerFolder>Properties</AppDesignerFolder>
 	<RootNamespace></RootNamespace>
@@ -46,10 +46,10 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Scripts\Element.cs" />
-     <Compile Include="Assets\Scripts\Enemy1.cs" />
+     <Compile Include="Assets\PointBlock.cs" />
+     <Compile Include="Assets\Scripts\MapHelper.cs" />
      <Compile Include="Assets\Scripts\Player.cs" />
-     <Compile Include="Assets\Scripts\PlayerMelee.cs" />
+     <Compile Include="Assets\Scripts\PlayerRotate.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
