--- a/territory-draw/Assembly-CSharp.csproj
+++ b/territory-draw/Assembly-CSharp.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\GameCanvas.cs" />
+     <Compile Include="Assets\Player.cs" />
      <Compile Include="Assets\TestTexture.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
