--- a/territory-draw/Assembly-CSharp-vs.csproj
+++ b/territory-draw/Assembly-CSharp-vs.csproj
@@ -46,8 +46,11 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\DebugDraw.cs" />
      <Compile Include="Assets\Scripts\GameCanvas.cs" />
      <Compile Include="Assets\Scripts\Player.cs" />
+     <Compile Include="Assets\Scripts\SteeringUtils.cs" />
+     <Compile Include="Assets\Scripts\Wander.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
